# tesis-mds

./: .env-example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: Experiment1.py  Experiment1_FM.py  Partiality.py  notebook.py
notebooks/html/: Experiment1.html
scripts/: 6dpose.py  extract.py
src/: ProjPaths.py  logger.py  model_wrappers.py
src/6dpose/: config.py
src/data_loaders/: SimplePointCloudLoader.py  config.py  dataload.py  ingest.py  utils.py
src/degradation/: degradations.py  partial.py
src/feature_extractor/: backprojection.py  config.py  feature_pipeline.py  mesh_backprojection.py  rendering.py  sampling.py
src/metrics/: invariance.py  utils.py
src/pipelines/: backprojected_features.py  eval_invariance.py
src/pose6d/: config.py  data_loader.py  geometry_utils.py  registrate.py  sanity.py  visualization.py
src/transformations/: PCA_compresor.py
test/data_loaders/: test_dataload.py  test_dataload_batches.py  test_obj_gt_ingest_load.py
test/feature_extractor/: conftest.py  test_backprojection.py  test_pipeline.py  test_rendering.py  test_sampling.py
test/fixtures/: R.pt  T.pt  point_cloud.pt  sample_001.txt
