[project]
name = "tesis-code"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "loguru>=0.7.3",
    "rich>=15.0.0",
    "torch==2.8.0+cu129",
    "torchvision==0.23.0+cu129",
    "pytorch3d==0.7.8+pt2.8.0cu129",
    "point-cloud-utils",
    "torch-geometric",
    "trimesh",
    "pyvista",
    "scikit-learn",
    "dotenv>=0.9.9",
    "pyg-lib",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/data_loaders",
    "src/feature_extractor",
    "src/pipelines"
]
[dependency-groups]
experiments = [
    "fastparquet>=2026.5.0",
    "marimo>=0.23.9",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "sns>=0.1",
]
6dpose = [
    "numpy>=2.0.0",
    "scipy>=1.11.0",
    "opencv-python-headless>=4.8.0",
    "trimesh>=4.0.0",
    "open3d==0.19.0",
    "huggingface-hub>=0.20.0",
]
test = [
    "pytest>=9.1.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore:No mtl file provided:UserWarning",
]
[tool.uv]
index-strategy = "unsafe-best-match"
environments = ["sys_platform == 'linux'", "sys_platform == 'win32'"]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
pytorch3d = [
    { url = "https://github.com/MiroPsota/torch_packages_builder/releases/download/pytorch3d-0.7.8/pytorch3d-0.7.8%2Bpt2.8.0cu129-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
    { url = "https://github.com/MiroPsota/torch_packages_builder/releases/download/pytorch3d-0.7.8/pytorch3d-0.7.8%2Bpt2.8.0cu129-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" }
]
pyg-lib = [
    { url = "https://data.pyg.org/whl/torch-2.8.0%2Bcu129/pyg_lib-0.6.0%2Bpt28cu129-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl", marker = "sys_platform == 'linux'" },
    { url = "https://data.pyg.org/whl/torch-2.8.0%2Bcu129/pyg_lib-0.6.0%2Bpt28cu129-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" }
]
